compiler/tests/fixtures/negative/error_runtime.sol
function start() -> int {
    return 1 / 0;
}
